--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,14 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .github export-ignore
+# used to track files as large files using `git lfs`
+# binary files
+*.tar.bz2 filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.tar.xz filter=lfs diff=lfs merge=lfs -text
+*.tgz filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
