--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,9 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .github export-ignore
+# used to expand placeholders for deployment using `git archive`
+# text files
+*.md export-subst
 # used to track files as large files using `git lfs`
 # binary files
 *.tar.bz2 filter=lfs diff=lfs merge=lfs -text
