--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,5 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+*.dwg filter=lfs diff=lfs merge=lfs -text
+*.dxb filter=lfs diff=lfs merge=lfs -text
