ci: github: use dawidd6/action-download-artifact@v2
Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -15,20 +15,20 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Checkout the code
+      - name: 📦 Checkout the code
         uses: actions/checkout@v3
         with:
           path: workspace
           submodules: recursive
           ref: ${{ github.ref }}
 
-      - name: Build documentation
+      - name: 📖 Build documentation
         working-directory: workspace
         run: |
           archive="doc_build_${GITHUB_RUN_ID}.tgz"
           mkdir -p doc && git archive --format=tgz --output="doc/${archive}" ${{ github.ref }}
 
-      - name: Archive documentation
+      - name: 💾 Archive documentation
         working-directory: workspace
         run: |
           # synopsys: publish2 docroot electronic <archive>
@@ -36,7 +36,7 @@ jobs:
           archive="doc_build_${GITHUB_RUN_ID}.tgz"
           mkdir -p doc && echo "publish2 docroot electronic ${archive}" > "doc/monitor_${GITHUB_RUN_ID}.txt"
 
-      - name: Upload artifact
+      - name: 📤 Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: doc
