--- a/.github/workflows/doc-publish.yml
+++ b/.github/workflows/doc-publish.yml
@@ -15,28 +15,36 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-      - name: Download artifact
-        uses: actions/github-script@v6
-        with:
-          script: |
-            var artifacts = await github.rest.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{ github.event.workflow_run.id }},
-            });
-            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "doc"
-            })[0];
-            var download = await github.rest.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            var fs = require('fs');
-            fs.writeFileSync('${{ github.workspace }}/doc.zip', Buffer.from(download.data));
+    # - name: Download artifact
+    #   uses: actions/github-script@v6
+    #   with:
+    #     script: |
+    #       let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
+    #          owner: context.repo.owner,
+    #          repo: context.repo.repo,
+    #          run_id: ${{ github.event.workflow_run.id }},
+    #       });
+    #       let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
+    #         return artifact.name == "doc"
+    #       })[0];
+    #       let download = await github.rest.actions.downloadArtifact({
+    #          owner: context.repo.owner,
+    #          repo: context.repo.repo,
+    #          artifact_id: matchArtifact.id,
+    #          archive_format: 'zip',
+    #       });
+    #       let fs = require('fs');
+    #       fs.writeFileSync('${{ github.workspace }}/doc.zip', Buffer.from(download.data), 'binary');
 
-      - name: Upload documentation
+      - name: 📥 Download artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          run_id: ${{ github.event.workflow_run.id }}
+          if_no_artifact_found: warn
+          skip_unpack: true
+          name: doc
+
+      - name: 📤 Upload documentation
         env:
           HOST: ${{ secrets.TSN_BRIDLE_DOCROOT_HOST }}
           PORT: ${{ secrets.TSN_BRIDLE_DOCROOT_PORT }}
@@ -44,6 +52,7 @@ jobs:
           KEY: ${{ secrets.TSN_BRIDLE_DOCROOT_KEY }}
           INBOX: ${{ secrets.TSN_BRIDLE_DOCROOT_INBOX }}
         run: |
+          ls -R
           unzip doc.zip
           mkdir -p ~/.ssh && \
             ssh-keyscan -p ${PORT} ${HOST} >> ~/.ssh/known_hosts
