--- a/.github/workflows/doc-remove.yml
+++ b/.github/workflows/doc-remove.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Create documentation removing monitor
+      - name: 💾 Create documentation removing monitor
         run: |
           # synopsys: remove docroot electronic
           mkdir -p doc && echo "remove docroot electronic" > "doc/monitor_${GITHUB_RUN_ID}.txt"
 
-      - name: Upload artifact
+      - name: 📤 Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: doc
